--- a/Hr_manager/Hr_manager/Hr_manager.csproj
+++ b/Hr_manager/Hr_manager/Hr_manager.csproj
@@ -88,11 +88,17 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ClassApp\ClassCorr.cs" />
+    <Compile Include="VisualApp\PagesApp\PageAddIntern.xaml.cs">
+      <DependentUpon>PageAddIntern.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VisualApp\PagesApp\PageLogin.xaml.cs">
       <DependentUpon>PageLogin.xaml</DependentUpon>
     </Compile>
     <Compile Include="VisualApp\PagesApp\PageMainMenu.xaml.cs">
       <DependentUpon>PageMainMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="VisualApp\PagesApp\PageTasks.xaml.cs">
+      <DependentUpon>PageTasks.xaml</DependentUpon>
     </Compile>
     <Page Include="VisualApp\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -145,11 +151,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="VisualApp\PagesApp\PageAddIntern.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="VisualApp\PagesApp\PageLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="VisualApp\PagesApp\PageMainMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VisualApp\PagesApp\PageTasks.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
